--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     {
       "name": "Benget Nata",
       "email": "bentinata@gmail.com"
+    },
+    {
+      "name": "Alwin Arrasyid",
+      "email": "alwin.ridd@gmail.com"
     }
   ],
   "license": "MIT",
@@ -34,6 +38,7 @@
     "bcryptjs": "~2.3.0",
     "bluebird": "^3.0.5",
     "body-parser": "~1.14.1",
+    "bookshelf": "^0.9.1",
     "connect-flash": "~0.1.1",
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "~1.4.0",
